--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 :root {
     --blanco: #ffffff;
     --negro: #000000;
-    --amarillo: #FFc107;
+    --amarillo: #ffc107;
     --celeste: #0097a7;
     --plomo: #757575;
 }
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-    font-family: 'krub', sans-serif;
+    font-family: 'Krub', sans-serif;
     background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
     min-height: 100%;
 }
@@ -108,8 +108,8 @@ p {
 }
 
 .contenedor-hero {
-    /*background-color: rgb(0 0 0 /70%);*/
-    /*otra opcion de transparencia del color negro*/
+    /* background-color: rgb(0 0 0 / 70%); */
+    /* otra opcion de transparencia del color negro */
     background-color: rgba(0, 0, 0, .7);
     position: absolute;
     width: 100%;
@@ -131,6 +131,7 @@ p {
     margin-top: .5rem;
     padding: .5rem 3rem;
     border-radius: 5px;
+    font-weight: 700;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.2rem;
@@ -142,11 +143,11 @@ p {
 }
 
 
-/*.tagline {
+/* .tagline {
     display: inline;
-}*/
+} */
 
-.todoLosServicios {
+.todosLosServicios {
     scroll-snap-align: center;
     scroll-snap-stop: always;
 }
@@ -177,8 +178,8 @@ p {
     background-color: var(--plomo);
     padding: 2rem;
     border-radius: 10px;
-    scroll-snap-stop: always;
     scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
 
 .formulario legend {
@@ -222,7 +223,7 @@ p {
 }
 
 .w-100 {
-    flex: 0 0 100%
+    flex: 0 0 100%:
 }
 
 .enviar {
@@ -248,7 +249,7 @@ p {
 }
 
 @media (min-width:768px) {
-    .todoLosServicios {
+    .todosLosservicios {
         display: grid;
         grid-template-columns: 33.3% 33.3% 33.3%;
         column-gap: 1rem;
@@ -262,21 +263,27 @@ p {
     }
 }
 
-@media (min-width:768px) {
+@media (min-width:480px) {
+    .campo {
+        display: flex;
+        align-items: center;
+    }
+}
+
+@media (min-width: 768px) {
     .campo {
         flex: 0 0 calc(50% - .5rem)
     }
 }
 
-@media (min-width:768px) {
+@media (min-width:480px) {
     .campo label {
         flex: 0 0 90px;
     }
 }
 
-@media (min-width:768px) {
-    : is(.campo): is( input[type="text"], input[type="text"], input[type="tel"], input[type="mail"], textarea) flex: 1;
-}
-
-
+@media (min-width: 768px) {
+     :is(.campo) :is( input[type="text"], input[type="text"], input[type="tel"], input[type="mail"], textarea) {
+        flex: 1;
+    }
 }
